# MediaChatPerso

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  ecosystem.config.js  package-lock.json  package.json  patch_arena.js  patch_bot.js  patch_buckshot.js  patch_defer.js  patch_deploy.js  patch_deploy_roulette.js  patch_discord_buckshot.js  patch_discord_buckshot_retry.js  patch_discord_index.js  patch_discord_roulette.js  patch_index2.js  patch_index3.js  patch_index_cleanup.js  patch_index_defer.js  patch_info.js  patch_interactions.js  patch_interactions_fix.js  patch_interactions_fix2.js  patch_roulette.js  patch_server.js  patch_server_buckshot.js  patch_server_fix.js  patch_server_roulette.js  test_typewriter_again.js
.github/workflows/: build-tauri.yml  build.yml
client/: AGENTS.md  package.json
client/src/: config.json  index.html  main.js  options.html  options.js
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
discord-bot/: deploy-commands.js  index.js  package.json
server/: ai.js  draw.js  events.js  items.json  market.js  memes.js  package.json  server.js  stats.js  stats.json  stats.test.js  stats_new.js  trade.js  tts.js
server/public/: index.html
server/public/css/: panel.css
server/public/dashboard/: index.html
server/public/js/: panel.js
src/: config.json  index.html  main.js  options.html  options.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+5 files in other folders)
