[package]
name    = "cacabox-client"
version = "1.0.0"
edition = "2021"

[lib]
name        = "cacabox_client_lib"
crate-type  = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell           = "2"
tauri-plugin-global-shortcut = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
raw-window-handle            = "0.6"
dirs                         = "5"

# Windows : accès aux APIs Win32 pour le click-through
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
]}

[profile.dev]
incremental = true

[profile.release]
panic    = "abort"
codegen-units = 1
lto      = true
opt-level = "s"   # Optimise pour la taille (légèreté Lenovo v14)
strip    = true
